# TxtElite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  goatsoup_fix.patch
scripts/: build.ps1  clean.ps1  run.ps1
trades/: trading_aggressive.txt  trading_max.txt
